# De-identification

./: README.md  ai_service.py  app.py  db_connector.py  deidentifier.py  models.py  phi_detector.py  phi_service.py  pyproject.toml  replit.nix  routes.py  rule_engine.py  utils.py
docs/: README.md  google_nlp_integration.md  phi_detection.md  project_documentation.md  setup.md
static/css/: custom.css  styles.css
static/js/: app.js
templates/: connections.html  explorer.html  index.html  layout.html  mappings.html  master.html  phi_detection.html  process.html  results.html  rules.html
